--- a/index.html
+++ b/index.html
@@ -76,10 +76,6 @@
         opacity: 0.7;
       }
 
-      .navbar-nav{
-        float:none;
-        align-items: center;
-      }
       
     </style>
 </head>
@@ -96,7 +92,7 @@
 
     <!---NAV BAR-->
 
-    <nav class="navbar navbar-expand-sm sticky-top fw-bold" style="background-color: #ffdd4a; ">
+    <nav class="navbar navbar-expand-sm sticky-top fw-bold " style="background-color: #ffdd4a; ">
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -382,9 +378,9 @@
         </div>
     </section>
 
-    <!---MAP-->
+    <!---contact us-->
 
-    <div class="container-fluid p-5">
+    <div class="container-fluid p-5" style="color:white;">
         <div class="row">
             <div class="col-7 text-center d-flex" id="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15421.353089980965!2d120.87053055947975!3d14.91823555424498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396552646a3050b%3A0xfa5575d920f147f5!2sMakinabang%2C%20Baliwag%2C%20Bulacan!5e0!3m2!1sen!2sph!4v1684926483606!5m2!1sen!2sph" 
@@ -393,7 +389,54 @@
             </div>
             <div class="col-5 bg-primary text-center">
                 <div class="container ">
-                    asdasdas
+                    <h4 class="mt-2 p-3">CONTACT US</h4>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-5">TALK TO US</div>
+                        <div class="col-7">CONNECT WITH US</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="row bg-info">
+                                <div class="col">
+                                    <a href="#" style="color: white;" class="fa fa-envelope-o"></a>
+                                </div>
+                                <div class="col">
+                                    <a href="#" style="color: white;" class="fa fa-phone"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-7">
+                            <div class="row bg-warning">
+                                <div class="col">
+                                    <a href="#" style="color: white;" class="fa fa-facebook"></a>
+                                </div>
+                                <div class="col">
+                                    <a href="#" style="color: white;" class="fa fa-twitter"></a>
+                                </div>
+                                <div class="col">
+                                    <a href="#" style="color: white;" class="fa fa-instagram"></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="container mt-3 p-5 bg-success">
+                            <form class="d-block">
+                              <div class="container">
+                                  <div class="row">
+                                      <div class="col">
+                                        <label for="Fname" class="form-label " style="float: left;">First Name</label>
+                                        <input type="textbox" class="form-control" id="Fname" placeholder="name">
+                                        <label for="Fname" class="form-label " style="float: left;">Last Name</label>
+                                        <input type="textbox" class="form-control" id="Fname" placeholder="name">
+                                      </div>
+                                  </div>
+                              </div>
+                            </form>
+
+                        </div>
+                  </div>
                 </div>
             </div>
         </div>
